[tool.poetry]
name = "machina"
version = "0.1.0"
description = ""
authors = ["Alex <46456279+the-alex-b@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
trimesh = "^4.1.3"
manifold3d = "^2.3.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
